# content-aware-ext

./: Cargo.toml  README.md  build-wasm.sh  package-lock.json  package.json
extension/: background.js  manifest.json  popup.html  popup.js  styles.css
src/: lib.rs
websocket-server/: package-lock.json  package.json  server.js
